--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,10 @@ title: Season's Greetings from Em & M
 email: m@mike-eng.com
 description: >- # this means to ignore newlines until "baseurl:"
   A holiday greeting for 2018
-baseurl: "/sandbox/card2018" # the subpath of your site, e.g. /blog
-url: "http://mike-eng.com" # the base hostname & protocol for your site, e.g. http://example.com
+# baseurl: "/sandbox/card2018" # the subpath of your site, e.g. /blog
+baseurl: ""
+# url: "http://mike-eng.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://localhost:4000"
 # twitter_username: jekyllrb
 github_username:  mrengy
 
