--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ github_username:  mrengy
 # Build settings
 markdown: kramdown
 theme: minima
+sass:
+    style: compressed
 plugins:
 #  - jekyll-feed
 
