attempt at multiple permalinks using redirect-from plugin

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ theme: minima
 sass:
     style: compressed
 plugins:
-#  - jekyll-feed
+  - jekyll-redirect-from
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
